in swagger /leads/getrecord/{table}/{columns}/{field}
