# swagger/leads.json
@@ -12,7 +12,7 @@
     },
     "servers": [
         {
-            "url": "http://127.0.0.1:4000/todos",
+            "url": "http://127.0.0.1:4000",
             "description": "Local server"
         }
     ],
@@ -24,75 +24,25 @@
     ],
     "components": {
         "schemas": {
-            "orderer": {
-                "type": "object",
-                "properties": {
-                    "serialNumber": {
-                        "type": "int",
-                        "description": "Filles it self",
-                        "example": "56"
-                    },
-                    "name": {
-                        "type": "string",
-                        "description": "The orderer's name (up to 20 chars)",
-                        "example": "משה"
-                    },
-                    "phone": {
-                        "type": "string",
-                        "description": "The orderer's phone (9 or 10 chars)",
-                        "example": "0527167844"
-                    },
-                    "addedDate": {
-                        "type": "date",
-                        "description": "The date of the orderer's first order",
-                        "example": "new Date()"
-                    },
-                    "disable": {
-                        "type": "boolean",
-                        "description": "Is the orderer able to make an order?",
-                        "example": "false"
-                    },
-                    "deletingDate": {
-                        "type": "date",
-                        "description": "If disable=false - when did it happen if not - date=null?",
-                        "example": "new Date()"
-                    }
-                }
-            },
-            "statuseslead": {
-                "type": "object",
-                "properties": {
-                    "serialNumber": {
-                        "type": "int",
-                        "description": "Filles it self",
-                        "example": "56"
-                    },
-                    "name": {
-                        "type": "string",
-                        "description": "The status name (up to 20 chars)",
-                        "example": "משה"
-                    },
-                    "addedDate": {
-                        "type": "date",
-                        "description": "The date when the status was added",
-                        "example": "new Date()"
-                    },
-                    "disable": {
-                        "type": "boolean",
-                        "description": "Is the status able?",
-                        "example": "false"
-                    },
-                    "deletingDate": {
-                        "type": "date",
-                        "description": "If disable=false - when did it happen? if not - date=null",
-                        "example": "new Date()"
-                    }
-                }
-            },
-            "phone": {
+            "empty": {
                 "type": "string",
-                "description": "phone",
-                "example": "0526497822"
+                "description": "dinamic response",
+                "example": "dinamic response"
+            },
+            "tableName": {
+                "type": "string",
+                "description": "TableName",
+                "example": "orderers"
+            },
+            "columnsNames": {
+                "type": "string",
+                "description": "columnsNames seperated with a ','",
+                "example": "OrdererPhone,OrdererName"
+            },
+            "fieldName": {
+                "type": "string",
+                "description": "Field name to match by filter",
+                "example": "OrdererName='משה'"
             },
             "Error": {
                 "type": "object",
@@ -112,89 +62,63 @@
         }
     },
     "paths": {
-        "/getstatuseslead": {
+        "/leads/getrecord/{table}/{columns}/{field}": {
             "get": {
                 "tags": [
                     "Leads CRUD operations"
                 ],
-                "description": "get statuses lead",
-                "operationId": "getstatuseslead",
-                "parameters": [],
-                "responses": {
-                    "200": {
-                        "description": "first 20 statuses lead",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/statuseslead"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/getorderers": {
-            "get": {
-                "tags": [
-                    "Leads CRUD operations"
-                ],
-                "description": "get orderers",
-                "operationId": "getorderers",
-                "parameters": [],
-                "responses": {
-                    "200": {
-                        "description": "first 20 orderers",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/orderer"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/getordererbyphone/:phone": {
-            "get": {
-                "tags": [
-                    "Leads CRUD operations"
-                ],
-                "description": "get ordererbyphone",
-                "operationId": "getordererbyphone",
+                "description": "get record",
+                "operationId": "getrecord",
                 "parameters": [
                     {
-                        "name": "phone",
-                        "in": "/getordererbyphone/:phone",
+                        "name": "table",
+                        "in": "/leads/getrecord/{table}/{columns}/{field}",
                         "schema": {
-                            "$ref": "#/components/schemas/phone"
+                            "$ref": "#/components/schemas/tableName"
                         },
                         "required": true,
-                        "description": "A phone param"
+                        "description": "Table name"
+                    },
+                    {
+                        "name": "columns",
+                        "in": "/leads/getrecord/{table}/{columns}/{field}",
+                        "schema": {
+                            "$ref": "#/components/schemas/columnsNames"
+                        },
+                        "required": true,
+                        "description": "Columns names"
+                    },
+                    {
+                        "name": "field",
+                        "in": "/leads/getrecord/{table}/{columns}/{field}",
+                        "schema": {
+                            "$ref": "#/components/schemas/fieldName"
+                        },
+                        "required": true,
+                        "description": "Field name"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "A single orderer with maching phone",
+                        "description": "filtered data",
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/orderer"
+                                    "$ref": "#/components/schemas/empty"
                                 }
                             }
                         }
                     },
                     "404": {
-                        "description": "Todo is not found",
+                        "description": "came back with an error",
                         "content": {
-                          "application/json": {
-                            "schema": {
-                              "$ref": "#/components/schemas/Error"
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
                             }
-                          }
                         }
-                      }
+                    }
                 }
             }
         }
